--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 test
+<iframe data-aa='2285323' src='//ad.a-ads.com/2285323?size=728x90' style='width:728px; height:90px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
